--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-datasheet": "^1.3.3"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "chai": "^4.1.2",
+    "concurrently": "^3.5.0",
+    "mocha": "^5.1.1",
+    "standard": "^11.0.1"
   }
 }
