--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "mongoose": "^5.0.15",
-    "react-datasheet": "^1.3.3"
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
