--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.15",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
