--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "eslint": "^4.19.1",
+    "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-data-grid": "^3.0.11",
     "react-datasheet": "^1.3.3",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
