--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.0.15",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
