--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "bootstrap": "^4.0.0",
     "eslint": "^4.19.1",
     "materialize-css": "^0.100.2",
+    "moment": "^2.22.2",
+    "popper": "^1.0.1",
     "react": "^16.2.0",
     "react-data-grid": "^3.0.11",
     "react-datasheet": "^1.3.3",
