--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
     "axios": "^0.18.0",
-    "eslint": "^5.2.0",
+    "eslint": "^4.19.1",
+    "npm": "^6.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
