Registration Backend integration

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,11 @@
   "name": "conference-hebergement-repas",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/api/*": {
+      "target": "http://localhost:5000"
+    }
+  },
   "dependencies": {
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
