--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "conference-hebergement-repas",
   "version": "0.1.0",
   "scripts": {
+    "start": "node index.js",
     "client": "cd client && yarn start",
     "server": "nodemon index.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
