--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^4.1.2",
     "concurrently": "^3.5.0",
     "mocha": "^5.1.1",
+    "nodemon": "^1.18.3",
     "standard": "^11.0.1"
   }
 }
